--- a/索引.html
+++ b/索引.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>Hello Github</h1>
-<a herf="www.baidu.com">baidu</a>
+<a href="www.baidu.com">baidu</a>
 </body>
 </html>
