--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>Hello Github</h1>
-    <a href="www.baidu.com">baidu</a>
+    <a href="http://www.baidu.com/">baidu</a>
 </body>
 </html>
